@@ -1,15 +1,20 @@
-// src/main/java/com/bistro_template_backend/config/SecurityConfig.java
+// File: src/main/java/com/bistro_template_backend/config/SecurityConfig.java
 package com.bistro_template_backend.config;
 
 import com.bistro_template_backend.utils.JwtFilter;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.core.annotation.Order;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.security.oauth2.jwt.JwtDecoder;
+import org.springframework.security.oauth2.jwt.NimbusJwtDecoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.security.web.util.matcher.AntPathRequestMatcher;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
@@ -21,51 +26,70 @@ import java.util.List;
 @EnableWebSecurity
 public class SecurityConfig {
 
-    private final JwtFilter jwtFilter;
+    @Autowired
+    private CognitoConfig cognitoConfig;
 
-    public SecurityConfig(JwtFilter jwtFilter) {
-        this.jwtFilter = jwtFilter;
-    }
+    @Autowired
+    private JwtFilter jwtFilter;
 
+    /**
+     * Security configuration for Admin routes (uses custom JWT with HS256)
+     */
     @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+    @Order(1)
+    public SecurityFilterChain adminSecurityFilterChain(HttpSecurity http) throws Exception {
         http
+                .securityMatcher("/api/admin/**", "/api/auth/login", "/api/auth/create-admin")
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .csrf(csrf -> csrf.disable())
-                .requiresChannel(channel ->
-                        channel.requestMatchers(r -> r.getHeader("X-Forwarded-Proto") != null)
-                                .requiresSecure())
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/api/auth/**").permitAll()
-                        .requestMatchers("/api/admin/**").hasRole("ADMIN")
-                        .requestMatchers("/api/menu/**").permitAll()
-                        .requestMatchers("/api/orders/**").permitAll()
-                        .requestMatchers("/api/categories/**").permitAll()
-                        .requestMatchers("/ws-orders/**").permitAll()
-                        .requestMatchers("/api/websocket/**").permitAll()
-                        .requestMatchers("/api/test/**").permitAll()
-                        .requestMatchers("/actuator/**").permitAll() // Add health check endpoint
-                        // Voice AI endpoints
-                        .requestMatchers("/api/voice/**").permitAll()
-                        .requestMatchers("/api/voice/session/start").permitAll()
-                        .requestMatchers("/api/voice/session/*/process").permitAll()
-                        .requestMatchers("/api/voice/session/*/tts").permitAll()
-                        .requestMatchers("/api/voice/session/*/order").permitAll()
-                        .requestMatchers("/api/voice/session/*/finalize").permitAll()
-                        .requestMatchers("/api/voice/session/*/cancel").permitAll()
-                        .requestMatchers("/api/voice/session/*/status").permitAll()
-                        .requestMatchers("/api/voice/rate-limit-status").permitAll()
-                        .requestMatchers("/api/voice/health").permitAll()
-                        .requestMatchers("/ws/**").permitAll()
-                        .requestMatchers("/app/voice/realtime/**").permitAll()
-                        .requestMatchers("/topic/voice/realtime/**").permitAll()
-                        .requestMatchers("/user/topic/voice/realtime/**").permitAll()
-                        .requestMatchers("/api/voice/admin/**").hasRole("ADMIN")
-                        .anyRequest().authenticated()
+                        .requestMatchers("/api/auth/login", "/api/auth/create-admin").permitAll()
+                        .requestMatchers("/api/admin/**").authenticated()
                 )
                 .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
+    }
+
+    /**
+     * Security configuration for Customer/User routes (uses AWS Cognito JWT with RS256)
+     */
+    @Bean
+    @Order(2)
+    public SecurityFilterChain customerSecurityFilterChain(HttpSecurity http) throws Exception {
+        http
+                .securityMatcher("/api/auth/me", "/api/rewards/**", "/api/orders/**")
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .csrf(csrf -> csrf.disable())
+                .authorizeHttpRequests(auth -> auth
+                        .requestMatchers("/api/auth/me", "/api/rewards/**", "/api/orders/**").authenticated()
+                )
+                .oauth2ResourceServer(oauth2 -> oauth2
+                        .jwt(jwt -> jwt.decoder(jwtDecoder()))
+                );
+
+        return http.build();
+    }
+
+    /**
+     * Default security configuration for all other routes
+     */
+    @Bean
+    @Order(3)
+    public SecurityFilterChain defaultSecurityFilterChain(HttpSecurity http) throws Exception {
+        http
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .csrf(csrf -> csrf.disable())
+                .authorizeHttpRequests(auth -> auth
+                        .anyRequest().permitAll()  // Allow all other requests
+                );
+
+        return http.build();
+    }
+
+    @Bean
+    public JwtDecoder jwtDecoder() {
+        return NimbusJwtDecoder.withJwkSetUri(cognitoConfig.getJwkUrl()).build();
     }
 
     @Bean
@@ -78,7 +102,7 @@ public class SecurityConfig {
         CorsConfiguration configuration = new CorsConfiguration();
 
         // Use origin patterns for more flexible matching
-        configuration.setAllowedOriginPatterns(List.of(
+        configuration.setAllowedOriginPatterns(Arrays.asList(
                 "http://localhost:*",
                 "https://localhost:*",
                 "http://192.168.*.*:*",
@@ -90,14 +114,9 @@ public class SecurityConfig {
                 "https://*.ngrok-free.app",
                 "https://*.ngrok.io"
         ));
-
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(Arrays.asList("*"));
-
-        // Set to false for broader mobile compatibility
-        configuration.setAllowCredentials(false);
-
-        configuration.setMaxAge(3600L);
+        configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
